--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,8 +1,9 @@
 <header>
   <button (click)="irParaTelaInicial()">
-    <img src="assets/imagens/Design sem nome.png" alt="Logo da aplicação Buscante">
+    <img src="assets/imagens/Design sem nome.png" alt="Logo da aplicação Buscante" routerLink="/lista-livros">
   </button>
   <div>
+    <a routerLink="/ComentarioComponent">Comentários</a>
     <a href="#">Favoritos</a>
     <a href="https://github.com/lucasvieirapcr?page=1&tab=repositories" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/lucasvieiradf/" target="_blank">Contato</a>
